# cryptocurrency-exchange-rates-manager

./: .gitignore  .mypy.ini  .ruff.toml  README.md  mypy.ini  pyproject.toml
.github/workflows/: codeql.yml  poetry.yml
alembic/: env.py
cryptocurrency-parser/src/application/common/: coin_gateway.py  currency_gateway.py
cryptocurrency-parser/src/domain/models/: coin.py  coin_id.py
cryptocurrency-parser/src/domain/service/: coin.py
cryptocurrency-parser/src/infrastructure/models/: currency.py  price_history.py  trading_pair.py
cryptocurrency_parser/application/common/: database.py  transaction_manager.py
cryptocurrency_parser/application/currency/: currency_gateway.py  exceptions.py
cryptocurrency_parser/application/interactors/: exceptions.py
cryptocurrency_parser/application/interactors/currency/: add_currency.py  get_currency.py  get_currency_by_id.py  get_currency_by_ticker.py  remove_currency.py  remove_currency_by_id.py  remove_currency_by_ticker.py
cryptocurrency_parser/application/interactors/price_history/: add_price_history.py  get_highest_recorded_price.py  (+3 more)
cryptocurrency_parser/application/price_history/: price_history_gateway.py
cryptocurrency_parser/domain/exceptions/: exceptions.py
cryptocurrency_parser/entrypoints/: config.py  exceptions.py  main.py  setup.py
cryptocurrency_parser/entrypoints/ioc/: database.py  interactors.py  registry.py  repositories.py  setup.py  transaction_manager.py
cryptocurrency_parser/infrastructure/database/: database.py  transaction_manager.py
cryptocurrency_parser/presentation/: handlers.py
cryptocurrency_parser/src/entrypoints/: config.py
tests/integrations/postgresql/: test_database_engine.py
tests/unit/: conftest.py
(+52 files in other folders)
