[project]
name = "cryptocurrency-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "InWamos",email = "mykyta.pidgornyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "aiohttp[speedups] (>=3.11.11,<4.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dishka (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.3"
pytest-lazy-fixture = "^0.6.3"
types-pytest-lazy-fixture = "^0.6.3.20240707"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
mypy = "1.13.0"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = [
    "cryptocurrency_parser"
]
asyncio_default_fixture_loop_scope = "function"